--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-pandas==2.2.3
-xlrd==2.0.1
-openpyxl==3.1.5
-streamlit==1.45.0
-pyrebase==3.0.27
-PyJWT==2.10.1
-plotly==6.0.1
-Pillow==9.4.0 --only-binary=:all:
-rich==14.0.0
+streamlit
+pandas
+pyrebase4
+xlrd
+odfpy
+openpyxl
+plotly
